<resources>
    <string name="app_name" translatable="false">SNEF</string>
    <string name="ms_Login" translatable="false">Đăng nhập</string>
    <string name="ms_InputUsername" translatable="false">Nhập tên đăng nhập</string>
    <string name="ms_InputPassword" translatable="false">Nhập mật khẩu</string>
    <string name="ms_ConfirmPassword" translatable="false">Nhập lại mật khẩu</string>
    <string name="ms_HintUsername" translatable="false">Tên đăng nhập</string>
    <string name="ms_HintPassword" translatable="false">Mật khẩu</string>
    <string name="ms_HintConfirmPassword" translatable="false">Nhập lại mật khẩu</string>
    <string name="msg_change_password" translatable="false">Thay đổi mật khẩu</string>
    <string name="home_page" translatable="false">Trang chủ</string>
    <string name="category_page" translatable="false">Danh mục</string>
    <string name="account_page" translatable="false">Tài khoản</string>
    <string name="payment_page" translatable="false">Giỏ Hàng</string>
    <string name="around_page" translatable="false">Gần đây</string>
    <string name="search_hint" translatable="false">Tìm kiếm</string>
    <string name="message_store_around" translatable="false">Cửa hàng gần bạn</string>
    <string name="message_product_category" translatable="false">Bạn muốn tìm sản phẩm gì?</string>
    <string name="message_hot_product" translatable="false">Khuyến mãi hot</string>
    <string name="suggest_today" translatable="false">Gợi ý hôm nay</string>
    <string name="title_location_permission" translatable="false">Vị trí</string>
    <string name="text_location_permission" translatable="false">Cho phép truy cập vị trí của bạn</string>
    <string name="ok" translatable="false">Cho phép</string>
    <string name="no" translatable="false">Không</string>
    <string name="OpenGPS" translatable="false">Mở GPS</string>
    <string name="msg_follow" translatable="false">Yêu thích</string>
    <string name="msg_update_profile" translatable="false">Theo dỏi</string>
    <string name="msg_order_history" translatable="false">Lịch sử mua</string>
    <string name="msg_help" translatable="false">Hổ trợ</string>
    <string name="msg_logout" translatable="false">Đăng xuất</string>
    <string name="msg_expired_date" translatable="false">Kết thúc trong</string>
    <string name="msg_add_to_add" translatable="false">Thêm vào giỏ</string>
    <string name="msg_end_sell" translatable="false">Kết thúc bán</string>
    <string name="msg_fsp_end_sell" translatable="false">Ngày bán đã hết</string>
    <string name="msg_provided_by_store" translatable="false">Cung cấp bởi  </string>
    <string name="msg_description" translatable="false">Mô tả sản phẩm</string>
    <string name="msg_product_info_detail" translatable="false">Thông tin chia tiết</string>
    <string name="msg_see_more" translatable="false">Xem thêm</string>
    <string name="msg_add_to_cart_success" translatable="false">Sản phẩm đã được thêm vào giỏ hàng</string>
    <string name="msg_address" translatable="false">Địa chỉ</string>
    <string name="msg_rating" translatable="false">Đánh giá</string>
    <string name="msg_find" translatable="false">Bạn tìm gì hôm nay</string>
    <string name="msg_open_hour" translatable="false">Giờ mở cửa</string>
    <string name="msg_show_more" translatable="false">Xem thêm</string>
    <string name="msg_show_less" translatable="false">Thu gọn</string>
    <string name="msg_product" translatable="false">Sản phẩm</string>
    <string name="msg_login_fail" translatable="false">Tên đăng hoặc mặt khẩu không đúng</string>
    <string name="msg_still_not_rating" translatable="false">Chưa có đánh giá</string>
    <string name="msg_warehouse" translatable="false">Kho: </string>
    <string name="msg_saw_recent" translatable="false">Đã xem gần đây</string>
    <string name="msg_found" translatable="false">Đã tìm</string>
    <string name="msg_direct" translatable="false">Chỉ đường</string>
    <string name="msg_phone" translatable="false">Số điện thoại</string>
    <string name="msg_yet_data" translatable="false">Chưa có dữ liệu</string>
    <string name="msg_yet_product" translatable="false">Cửa hàng hiện chưa có sản phẩm</string>
    <string name="msg_change_avatar" translatable="false">Chạm để thay đổi</string>
    <string name="msg_gender" translatable="false">Giới tính</string>
    <string name="msg_email" translatable="false">Email</string>
    <string name="msg_product_sould_out" translatable="false">Sản phẩm đã bán hết</string>
    <string name="msg_product_max" translatable="false">Chỉ còn </string>
    <string name="msg_discount" translatable="false">Phần trăm giảm giá</string>
    <string name="msg_min_discount" translatable="false">Thấp nhất</string>
    <string name="msg_max_discount" translatable="false">Cao nhất</string>
    <string name="msg_price" translatable="false">Giá</string>
    <string name="msg_filter_tool" translatable="false">Bộ lọc</string>
    <string name="msg_filter_ok" translatable="false">Áp dụng</string>
    <string name="msg_filter_cancel" translatable="false">Xóa bộ lọc</string>
    <string name="msg_spinner_title" translatable="false">Khoảng cách (Km)</string>
    <string name="msg_register" translatable="false">Đăng ký</string>


    <string name="btn_delcart" translatable="false">Xóa</string>
    <string name="btn_confirmpayment" translatable="false">XÁC NHẬN THANH TOÁN</string>
    <string name="orderstatus_paid" translatable="false">Đã Thanh Toán</string>
    <string name="orderstatus_pickedup" translatable="false">Đã Nhận Hàng</string>
    <string name="question_rating" translatable="false">Bạn hài lòng với đơn hàng này chứ?</string>
    <string name="btn_submitrating" translatable="false">Gửi Phản Hồi</string>
    <string name="msg_thanksrating" translatable="false">Xin cảm ơn phản hồi của bạn.</string>
    <string name="msg_askrating" translatable="false">Vui lòng để lại phản hồi trước khi gửi.</string>
    <string name="msg_emptycart" translatable="false">Bạn chưa có sản phẩm nào trong giỏ hàng.</string>
    <string name="btn_contshopping" translatable="false">TIẾP TỤC MUA HÀNG</string>

    <string name="StatusSouldOut" translatable="false">Bán hết</string>
    <string name="StatusNearlySouldOut" translatable="false">Sắp bán hết</string>
    <string name="StatusSould" translatable="false">Đã bán</string>
    <string name="StatusJustOpen" translatable="false">Vừa mở bán"</string>
    <string name="Open24" translatable="false">Open 24/7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    // firebase
    <string name="project_id" translatable="false">010</string>

    // button
    <string name="msg_last_name" translatable="false">Họ</string>
    <string name="input_last_name" translatable="false">Nhập họ</string>
    <string name="msg_first_name" translatable="false">Tên</string>
    <string name="input_first_name" translatable="false">Nhập tên</string>


</resources>
