<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:title="@string/home_page"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_category"
        android:enabled="true"
        android:title="@string/category_page"
        android:icon="@drawable/category"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_around"
        android:enabled="true"
        android:title="@string/around_page"
        android:icon="@drawable/around"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_orders"
        android:enabled="true"
        android:icon="@drawable/order"
        android:title="@string/payment_page"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/account"
        android:title="@string/account_page"
        app:showAsAction="ifRoom" />
</menu>