<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <ImageView
        android:layout_width="175dp"
        android:layout_height="158dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/input_last_name"/>
        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_last_name"
            android:inputType="textCapWords"
            android:textSize="18dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="282dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/input_first_name"/>
        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_first_name"
            android:inputType="textCapWords"
            android:textSize="18dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="282dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/ms_InputUsername"/>
        <EditText
            android:id="@+id/txtRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ms_HintUsername"
            android:textSize="18dp"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="282dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/ms_InputPassword"/>
        <EditText
            android:id="@+id/txtRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ms_HintPassword"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="282dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/ms_ConfirmPassword"/>
        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ms_HintConfirmPassword"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="282dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/notiRegister"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:textColor="@color/redApp"
        android:textStyle="bold"
        android:textSize="18dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/btnCreateAccount"
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/redApp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        tools:layout_editor_absoluteY="442dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="CREATE ACCOUNT"
                android:textColor="@color/colorMain"
                android:textStyle="bold"
                android:textSize="22dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:onClick="clickToBackSignIn"
        android:text="Already a member? Login"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorPrimary"
        tools:layout_editor_absoluteY="520dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>