<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity">
    <!--Top bar-->
    <LinearLayout
        android:id="@+id/topBar"
        android:background="@color/redApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="10dp"
        >

        <SearchView
            android:id="@+id/searchProductBar"
            android:background="@color/colorMain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:queryHint="@string/msg_find"
            app:defaultQueryHint="Thử coi"
            android:focusable="true"
            app:iconifiedByDefault="false"

            ></SearchView>

    </LinearLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_below="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/redWhite"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextColor="@color/colorPrimaryDark"
        >

    <android.support.design.widget.TabItem
        android:id="@+id/tabSaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_saw_recent"
        />


    <android.support.design.widget.TabItem
        android:id="@+id/tabFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_found" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_page"/>

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_below="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcCategoriesSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:visibility="invisible"
        android:layout_marginTop="5dp"
        >

    </android.support.v7.widget.RecyclerView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/listNameProduct"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rcCategoriesSearch"
        android:visibility="invisible"
        android:background="@color/grayLight"
        android:layout_marginTop="5dp"
        ></android.support.v7.widget.RecyclerView>

</RelativeLayout>