<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/appImage"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>

    <TextView
        android:text="@string/ms_Login"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorGrey"
        android:drawableLeft="@mipmap/ic_launcher_username"
        android:textColorHint="@color/redApp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ms_HintUsername"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="282dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorGrey"
        android:drawableLeft="@mipmap/ic_launcher_password"
        android:textColorHint="@color/redApp"
        android:ems="10"
        android:hint="@string/ms_HintPassword"
        android:inputType="textPassword"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="338dp" />

    <TextView
        android:id="@+id/errLogin"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:textColor="@color/colorMain"
        android:textStyle="bold"
        android:textSize="18dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/formLoginButton"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/redApp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="442dp"
        android:layout_gravity="center"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ms_Login"
                android:textColor="@color/colorMain"
                android:textStyle="bold"

                android:textSize="25dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="18dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="520dp"
        android:textColor="@color/redApp"
        android:onClick="clickToRegister"/>


</LinearLayout>